Additional Text Overflow fix

--- a/app/pages/reservation/reservation-confirmation/_reservation-confirmation.scss
+++ b/app/pages/reservation/reservation-confirmation/_reservation-confirmation.scss
@@ -13,6 +13,7 @@
   &__field {
     padding-top: 12px;
     display: grid;
+    word-break: break-all;
   }
   a {
     color: $blue;
